// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package messages;


// Job specifies a single cron job belonging to a project.
message Job {
  // Id is a name of the job (unique for the project).
  optional string id = 1;
  // Schedule in regular cron expression format.
  optional string schedule = 2;
  // Disables is true to disable this job.
  optional bool disabled = 3;
  // Task defines what exactly to execute.
  optional Task task = 4;
}


// Task defines what exactly to do. One and only one field must be set.
message Task {
  // Noop is used for testing. It is "do nothing" task.
  optional NoopTask noop = 1;
  // UrlFetch can be used to make a simple HTTP call.
  optional UrlFetchTask url_fetch = 2;
}


// NoopTask is used for testing. It is "do nothing" task.
message NoopTask {
}


// UrlFetchTask specifies parameters for simple HTTP call.
message UrlFetchTask {
  // Method is HTTP method to use, such as "GET" or "POST".
  optional string method = 1 [default = "GET"];
  // Url to send the request to.
  optional string url = 2;
  // Timeout is how long to wait for request to complete.
  optional int32 timeout_sec = 3 [default = 60];
  // TODO: add more.
}


// ProjectConfig defines a schema for cron.cfg files that describe cron jobs
// belonging to some project.
message ProjectConfig {
  // Job is a set of jobs defines in the project. It's singular to make
  // text-encoded proto definitions more readable.
  repeated Job job = 1;
}
